// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkBlank /> snapshotting should render correctly with a content 1`] = `
<a
  className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ps4owl-MuiTypography-root-MuiLink-root"
  href="https://dariaklover.health"
  onBlur={[Function]}
  onFocus={[Function]}
  target="_blank"
>
  Lorem Ipsulum
   
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1xzgpfl-MuiSvgIcon-root"
    data-testid="OpenInNewIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
    />
  </svg>
</a>
`;

exports[`<LinkBlank /> snapshotting should render correctly without a content 1`] = `
<a
  className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ps4owl-MuiTypography-root-MuiLink-root"
  href="https://dariaklover.health"
  onBlur={[Function]}
  onFocus={[Function]}
  target="_blank"
>
   
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1xzgpfl-MuiSvgIcon-root"
    data-testid="OpenInNewIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
    />
  </svg>
</a>
`;
